# llm-langgraph

./: .gitignore  CHAT_CLI_USAGE.md  INSTALL.md  LICENSE  LICENSING.md  LLM_CONTEXT.md  README.md  agents.json  app.py  config.json  direct_docker_run.py  docker_executor.py  groupchats.json  main.py  models.json  pyproject.toml  requirements.txt  run.sh  stop.sh  test_docker_execution.py
LICENSES/: COMMERCIAL.txt
config/: agent_types.json  agents.json  config.json  docker_languages.json  groupchats.json  models.json
src/: app.py  chat_cli.py  config.json  demo.py
src/agents/: agent_factory.py
src/graph/: group_chat.py
src/memory/: conversation_memory.py
src/models/: model_manager.py
src/tools/: direct_executor.py  docker_code_runner.py  manager_tools.py  tool_registry.py  workspace_tools.py
src/utils/: code_extractor.py  config.py  conversation_manager.py  message_processor.py  workspace_manager.py
