[project]
name = "llm-langgraph2"
version = "0.1.0"
description = "Multi-agent LLM chat with groupchat functionality using LangGraph and Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.25",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.30",
    "langgraph>=0.0.30",
    "ollama>=0.4.9",
    "streamlit>=1.45.1",
]
