[project]
name = "llm-langgraph2"
version = "0.1.0"
description = "Multi-agent LLM chat with groupchat functionality using LangGraph and Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "LLM-LangGraph Contributors" },
]

dependencies = [
    # Core LangChain and LangGraph
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.19",
    "langgraph>=1.1.2",
    
    # LLM Integrations
    "langchain-ollama>=1.0.1",
    "ollama>=0.6.1",
    
    # Web UI
    "streamlit>=1.55.0",
    
    # Docker Support for Code Execution
    "docker>=7.1.0",
    
    # Utilities
    "pyyaml>=6.0.3",
    "tenacity>=9.1.4",
    "typing-extensions>=4.15.0",
    "python-dotenv>=1.2.2",
    "jsonpatch>=1.33",
]

[project.urls]
homepage = "https://github.com/yourusername/llm-langgraph"
repository = "https://github.com/yourusername/llm-langgraph"

[project.scripts]
lang-chat = "src.chat_cli:main"

[tool.ruff]
extend-select = ["E", "F", "I"]
ignore = ["E203"]
target-version = "py311"
line-length = 100
